# Traffic-network-simulator

./: CMakeLists.txt  main.cpp  run.bat
data/: .movements.csv  v.csv
docs/: manejo-archivos.md  vision-general.md
online_documentation/app/api/docs/[slug]/: route.ts
online_documentation/public/docs/: estructura-archivos.md  flujo-ejecucion.md
src/: Algorithms.h  BFS.cpp  DFS.cpp  Graph.h
src/controllers/: BaseController.h  NetworkController.cpp  NetworkController.h  VehicleController.cpp  VehicleController.h
src/models/: Edge.h  Graph.cpp  Graph.h  HashTable.cpp  HashTable.h  Node.h  Vehicle.h
src/services/: FileService.cpp  FileService.h  MessageService.cpp  MessageService.h  SelectionService.cpp  SelectionService.h  UIService.cpp  UIService.h  ValidationService.cpp  ValidationService.h
src/views/: BaseView.h  MenuItem.h  MenuView.cpp  MenuView.h  NetworkView.cpp  NetworkView.h  VehicleView.cpp  VehicleView.h
utils/: tableUtils.h
